<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin">

    <EditText
        android:id="@+id/edTenSach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:drawableStart="@drawable/custom_name_icon"
        android:drawablePadding="@dimen/padding_text"
        android:ems="10"
        android:hint="@string/ten_sach"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_text"
        android:paddingRight="@dimen/padding_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small" />

    <EditText
        android:id="@+id/edGiaThue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:drawableStart="@drawable/custom_money_icon"
        android:drawablePadding="@dimen/padding_text"
        android:ems="10"
        android:hint="@string/gia"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_text"
        android:paddingRight="@dimen/padding_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small" />
    <TextView
        android:text="@string/loai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/spLoaiSach"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="4dp"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/padding_text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin">

        <Button
            android:id="@+id/btnSaveSach"
            android:layout_width="@dimen/button_with"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_save"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancelSach"
            android:layout_width="@dimen/button_with"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_cancel"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>