<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin">


    <EditText
        android:id="@+id/edHoTenTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:drawableStart="@drawable/custom_name_icon"
        android:drawablePadding="@dimen/padding_text"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_text"
        android:paddingRight="@dimen/padding_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small" />

    <EditText
        android:id="@+id/edNamSinhTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:drawableStart="@drawable/custom_year_icon"
        android:drawablePadding="@dimen/padding_text"
        android:ems="10"
        android:hint="@string/nam_sinh"
        android:inputType="textPersonName"
        android:maxLength="4"
        android:paddingLeft="@dimen/padding_text"
        android:paddingRight="@dimen/padding_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin">

        <Button
            android:id="@+id/btnSaveTV"
            android:layout_width="@dimen/button_with"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_save"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancelTV"
            android:layout_width="@dimen/button_with"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_cancel"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>