<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spThanhVien"
        android:layout_width="0dp"
        android:layout_height="@dimen/item"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ten_sach"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spThanhVien" />

    <Spinner
        android:id="@+id/spTenSach"
        android:layout_width="0dp"
        android:layout_height="@dimen/item"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edNgayThue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/custom_date_icon"
        android:drawablePadding="@dimen/padding_text"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_text"
        android:paddingRight="@dimen/padding_text"
        app:layout_constraintEnd_toStartOf="@+id/imgDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTenSach" />

    <ImageView
        android:id="@+id/imgDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/edNgayThue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edNgayThue"
        app:srcCompat="@drawable/ic_date" />

    <EditText
        android:id="@+id/edTienThue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/custom_money_icon"
        android:drawablePadding="@dimen/padding_text"
        android:ems="10"
        android:hint="@string/money"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_text"
        android:paddingRight="@dimen/padding_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNgayThue" />

    <CheckBox
        android:id="@+id/chkTraSach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/checked"
        android:textSize="@dimen/text_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTienThue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@+id/chkTraSach">

        <Button
            android:id="@+id/btnSavePM"
            android:layout_width="@dimen/button_with"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_save"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancelPM"
            android:layout_width="@dimen/button_with"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_cancel"
            android:text="@string/cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>